--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-The Heroku Boilerplate includes all the files you need to get NodeJS set up on Heroku. The files were created from the Heroku tutorial, "Getting Started with Node.js on Heroku/Cedar" http://devcenter.heroku.com/articles/node-js
+LIFE OF TRASH LANDFILL MAP
 
-Follow along with the tutorial and use the files included to get your Heroku Node project up and running easily.
+This is a colleciion of all landfill in the country according to the EPA Echo database.  The project uses the Google Maps API to plot each landfill.
