--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 LIFE OF TRASH LANDFILL MAP
 
-This is a colleciion of all landfill in the country according to the EPA Echo database.  The project uses the Google Maps API to plot each landfill.
+This is a colleciion of all landfill in the country according to the EPA Echo database.  The project uses the Google Maps API to plot each landfill. Very interesting.
